Fixed z-index of graphic tags in the 'material' theme to bring them above the product image swiper

--- a/app/assets/stylesheets/themes/material.scss
+++ b/app/assets/stylesheets/themes/material.scss
@@ -1228,7 +1228,7 @@ $material-easing: cubic-bezier(0.4, 0.0, 0.2, 1) !default;
   position: absolute;
   top: 20px;
   left: 0;
-  z-index: 1;
+  z-index: 2;
 
   .tag {
     float: left !important;
